fix styling alignment issues

--- a/src/app/components/page-cut/page-cut.styl
+++ b/src/app/components/page-cut/page-cut.styl
@@ -8,7 +8,8 @@ $page-cut-content
 .page-cut
 	--bg-save: var(--theme-bg-actual)
 	position: relative
-	text-align: center
+	display: flex
+	justify-content: center
 	margin-bottom: $line-height-computed
 
 	&::before
